# tetris

./: .gitignore  README.md  pyproject.toml
.local/: save.json
docs/: runtime_boundary_audit.md
src/tetris/: __init__.py  actions.py  app.py  app_shell.py  cli.py  config.py  game_loop.py  persistence.py  renderers.py  state.py
src/tetris.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/tetris/engine/: __init__.py  loop.py  pieces.py  state.py
src/tetris/stage/: __init__.py  cells.py  data.py  objectives.py  runtime.py  stages.json
src/tetris/ui/: __init__.py  panels.py  renderers.py  tk_renderer.py
tests/: test_app_shell.py  test_board_logic.py  test_bootstrap.py  test_cli.py  test_object_persistence.py  test_objectives.py  test_piece_logic.py  test_player_persistence.py  test_release_metadata.py  test_runtime_boundary_audit.py  test_stage_flow.py  test_stage_loader.py  test_stage_tiles.py  test_tutorial_playthrough.py  test_ui_integration.py
tetris/: __init__.py
