[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tetris"
version = "0.1.0"
description = "Bootstrap skeleton for a puzzle-driven Tetris MVP."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Codex" },
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
tetris = "tetris.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tetris.stage" = ["*.json"]
